# xlsMakeQm

./: Makefile  Makefile.am  Makefile.in  ParseGuiString.cpp  ParseGuiString.h  configure  configure.ac  cvtutf8  cvtutf8.pro  fontproject2.cpp  getFileStringUnicode.cpp  getFileStringUnicode.h  main.cpp  script_range1020.pe  xlsHandler.cpp  xlsHandler.h
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
libxls-0.2.0/: Makefile  config.status  libtool
libxls-0.2.0/include/: Makefile
libxls-0.2.0/include/libxls/: Makefile  brdb.h  xls.h  xlsstruct.h  xlstool.h
libxls-0.2.0/src/: Makefile  xls2csv.c
libxls-0.2.0/src/.deps/: ole.Plo  xls.Plo  xls2csv.Po  xlstool.Plo
libxls-0.2.0/test/: Makefile
libxls-0.2.0/test/.deps/: test.Po  test2.Po
source/: 20130619.xls
